--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./styke.css">
 </head>
 <body>
+    <img id="logo" src="./current.png" alt="logo"><br>
     <div class="current">
-        <img id="logo" src="./current.png" alt="logo"><br>
         <h1 class="fst">
             <span>GROW</span>
             <span>A</span>
@@ -28,11 +28,20 @@
             <span>FREE</span>
         </h1>
         <p id="seed">Seed in the CUP</p>
+        <img id="_2-1" src="./2.png">
+        <img id="_2-2" src="./2.png">
+        <img id="_2-3" src="./2.png">
+        <!-- <img id="_4" src="./4.png"> -->
         <img id="pic" src="./Untitled.png" alt="Peace lily"><br>
         <div class="cont" id="cont">
-            <p><p style="text-align: center;">Peace lily</p> <br> -> Removes pollutants such as formaldehyde, benzene, and ammonia.<br>-> Releases oxygen during the photosynthesis process.</p>
+            <p style="text-align: center;">Peace lily</p>
+            <div class="lll">
+                <p > <br> -> Removes pollutants such as formaldehyde, benzene, and ammonia.<br>-> Releases oxygen during the photosynthesis process.</p>
+                
+            </div>
         </div>
     </div>
+    <img id="_3" src="./3.png">
     <footer>
         <div class="foot">
             <a href="tel:+918248010377"><i class="fa-solid fa-phone"></i>&nbsp;&nbsp; +91 8248010377, </a> <a href="tel:+919952696784">+91 9952696784</a><br><br>
