--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="fst">
             <span>GROW</span>
             <span>A</span>
-            <span>TREE,</span>
+            <span>TREE</span>
         </h1>
         <h1 class="snd">
             <span>IT</span>
@@ -27,17 +27,22 @@
             <span>PLANT</span>
             <span>FREE</span>
         </h1>
-        <p id="seed">Seed in the CUP</p>
+        <p id="seed">SEED CUP</p>
         <img id="_2-1" src="./2.png">
         <img id="_2-2" src="./2.png">
         <img id="_2-3" src="./2.png">
         <!-- <img id="_4" src="./4.png"> -->
         <img id="pic" src="./Untitled.png" alt="Peace lily"><br>
         <div class="cont" id="cont">
-            <p style="text-align: center;">Peace lily</p>
+            <p style="text-align: center; font-size: 25px; color: rgb(233, 244, 85);">PEACE LILY</p>
             <div class="lll">
-                <p > <br> -> Removes pollutants such as formaldehyde, benzene, and ammonia.<br>-> Releases oxygen during the photosynthesis process.</p>
-                
+                <ul>
+                    <li>PEACE LILY SEEDS ARE IMPOSED IN CUP</li>
+                    <li>PEACE LILY SEED SAMPLING RELEASES OXYGEN DURING PHOTOSYNTHESIS AND REDUCE TOXIC GASES</li>
+                    <li>CUPS CONTAINS APPORXMATLEY 3 TO 5 SEEDS</li>
+                    "AFFORESTATION CAN BRING THE LAND TO LIFE"
+                    <p style="color: rgba(255, 255, 255, 0.564); margin-left: -18px;"><b>LETS_JOIN_OUR_HANDS_TOGETHER</b> </p>
+                </ul>
             </div>
         </div>
     </div>
@@ -45,8 +50,8 @@
     <footer>
         <div class="foot">
             <a href="tel:+918248010377"><i class="fa-solid fa-phone"></i>&nbsp;&nbsp; +91 8248010377, </a> <a href="tel:+919952696784">+91 9952696784</a><br><br>
-            <a href="mailto:torquesolutions95@gmai.com"><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp; torquesolutions95@gmail.com</a><br><br>
-            <a href="https://www.google.com/maps/place/K+RAMAKRISHNAN+COLLEGE+OF+TECHNOLOGY+(KRCT)/@10.9291332,78.7370215,17z/data=!3m1!4b1!4m6!3m5!1s0x3baaf79e2e1239bf:0x17aa15a4930f40e2!8m2!3d10.9291332!4d78.7370215!16s%2Fg%2F11f6g28ddr?"><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp; TORQUE ENGINEERING SOLUTIONS, SAMAYAPURAM, TRICHY-621 112, TAMIL NADU, INDIA</a>
+            <a href="mailto:torquesolutions95@gmai.com" style="font-size: 20px;"><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp; torquesolutions95@gmail.com</a><br><br>
+            <a href="https://www.google.com/maps/place/K+RAMAKRISHNAN+COLLEGE+OF+TECHNOLOGY+(KRCT)/@10.9291332,78.7370215,17z/data=!3m1!4b1!4m6!3m5!1s0x3baaf79e2e1239bf:0x17aa15a4930f40e2!8m2!3d10.9291332!4d78.7370215!16s%2Fg%2F11f6g28ddr?"><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp; TORQUE ENGINEERING SOLUTIONS, SAMAYAPURAM, TRICHY-621 112,<br> TAMIL NADU, INDIA</a>
         </div>
     </footer>
 </body>
