--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <img id="logo" src="./current.png" alt="logo"><br>
+    <img id="_3-3" src="./R (1).png">
+    <img id="_3" src="./3.png">
+    <img id="_4" src="./r.png">
     <div class="current">
         <h1 class="fst">
             <span>GROW</span>
@@ -31,7 +34,6 @@
         <img id="_2-1" src="./2.png">
         <img id="_2-2" src="./2.png">
         <img id="_2-3" src="./2.png">
-        <!-- <img id="_4" src="./4.png"> -->
         <img id="pic" src="./Untitled.png" alt="Peace lily"><br>
         <div class="cont" id="cont">
             <p style="text-align: center; font-size: 25px; color: rgb(233, 244, 85);">PEACE LILY</p>
@@ -46,7 +48,6 @@
             </div>
         </div>
     </div>
-    <img id="_3" src="./3.png">
     <footer>
         <div class="foot">
             <a href="tel:+918248010377"><i class="fa-solid fa-phone"></i>&nbsp;&nbsp; +91 8248010377, </a> <a href="tel:+919952696784">+91 9952696784</a><br><br>
