--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <a href="mailto:torquesolutions95@gmai.com" style="font-size: 20px;"><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp; torquesolutions95@gmail.com</a><br><br>
             <a href="https://www.google.com/maps/place/K+RAMAKRISHNAN+COLLEGE+OF+TECHNOLOGY+(KRCT)/@10.9291332,78.7370215,17z/data=!3m1!4b1!4m6!3m5!1s0x3baaf79e2e1239bf:0x17aa15a4930f40e2!8m2!3d10.9291332!4d78.7370215!16s%2Fg%2F11f6g28ddr?"><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp; TORQUE ENGINEERING SOLUTIONS, SAMAYAPURAM, TRICHY-621 112,<br> TAMIL NADU, INDIA</a>
         </div>
+        <img src="./g.png" id="gr">
     </footer>
 </body>
 </html>
